# Scoring-de-defaut-de-credit-POC-GenAI-Talk-to-my-Data-

./: .gitignore  README.md  requirements.txt
app/: .dockerignore  Dockerfile  streamlit_app.py
app/.streamlit/: config.toml
app/agents/: pyproject.toml
app/agents/config/: config.py
app/pages/: A_propos.py  Defaut_credit.py  Exploration.py  Rapport.py
app/utils/: charts.py  data.py
data/: credit_card_default.csv
models/: best_model_metadata.json  best_model_pipeline.joblib
notebooks/: 01_data_exploration.ipynb  02_modelisation_baseline.ipynb  03_modelisation_advanced.ipynb
utils/: feature_engineering.py
